squashing bugs

--- a/client/src/components/EditAccount/EditAccount.module.css
+++ b/client/src/components/EditAccount/EditAccount.module.css
@@ -95,8 +95,8 @@
 
 .imagecontainer {
   position: relative;
-  top: -155px;
-  left: 505px;
+  top: -55px;
+  left: 205px;
 }
 
 /* text inputs, boxes and elements */
